# oc_data_engineer_p12

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/postgres/: init.sh
docs/: p12_adr.docx  soutenance_p12.pptx
docs/quality/: quality_report.html
kestra/config/: kestra-config.yml
kestra/flows/: full_pipeline.yml  inject_live_activity.yml  recompute_benefits.yml  update_benefit_rules.yml
migrations/: V1__init_schema.sql  V2__add_declaration_valid_and_seed_rules.sql  V3__fix_effective_date.sql  V4__expand_enum_and_soft_delete.sql  V5__add_declaration_valid_to_employees.sql  V6__fix_bu_length.sql  V7__add_sport_to_employees.sql  V8__add_unique_activity_constraint.sql  V9__make_rules_id_nullable.sql
notebooks/: 01_eda_rh_data.ipynb  01_eda_sport_data.ipynb
src/consumers/: consumer_postgres.py  consumer_slack.py
src/generators/: generate_activities.py
src/pipelines/: compute_benefits.py  inject_live_activity.py  load_employees.py
src/producers/: publish_activities.py
src/quality/: run_quality_checks.py
src/utils/: db.py  encryption.py  gmaps.py  logger.py
src/validators/: schema_activity.py  schema_employee.py
tests/unit/: test_benefit_logic.py  test_transform_logic.py  test_validators.py
