[project]
name = "p12-sport-data-solution"
version = "0.1.0"
description = "POC pipeline données sportives - Sport Data Solution"
authors = [
    {name = "Alexandre Quintin",email = "alexandre.quintin@chill-data.com"}
]
readme = "README.md"
requires-python = "^3.11.8"
dependencies = []

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
